<resources>
    <string name="app_name">Плюшка</string>
    <string name="name1">Булочная-кондитерская </string>
    <string name="companyName">Булочная-кондитерская \n \"ПЛЮШКА\"</string>
    <string name="name2">ПЫШКА</string>

    <string name="logo">Logo</string>
    <string name="cond">Торты и пирожные</string>
    <string name="bakedBread">Сдобная выпечка</string>
    <string name="choco">Шоколад</string>
    <string name="Contact">Контакты</string>

    <string name="bread">Хлеб</string>
    <string name="breaddescr">Хлеб — пищевой продукт, получаемый путём выпечки, паровой обработки или жарки теста, состоящего, как минимум, из муки и воды. В большинстве случаев добавляется соль, а также используется разрыхлитель, такой как дрожжи. Для приготовления хлеба употребляют пшеничную и ржаную муку, реже — кукурузную, ячменную и другие. В некоторые сорта хлеба также добавляют специи такие, как зёрна тмина, орехи, изюм, чеснок, курагу и зёрнышки (семена кунжута, мака и другие). Зёрнышки также служат для украшения.</string>
    <string name="cake">Кексы</string>
    <string name="cakedescr">Кекс — сладкое кондитерское изделие, выпекаемое прямоугольной или круглой формы со сквозным отверстием в центре, обычно из дрожжевого или бисквитного теста. Кекс может содержать дополнительные ингредиенты, такие как: какао, цукаты, изюм, финики, орехи, лукум, джем и другие. Сверху кексы посыпают сахарной пудрой или глазируют помадкой, шоколадом, или украшают фруктами, миндалем и т. д.</string>
    <string name="coockie">Печенье</string>
    <string name="coockiedescr">Печенье — небольшое кондитерское изделие, выпеченное из теста. К тесту для печенья иногда добавляют различные зёрна; печенье обычно формуют в виде кружков, квадратов, звёздочек, трубочек; иногда печенье делают с начинкой (шоколадом, изюмом, сгущённым молоком, кремом) или помещают начинку между двумя печеньями.
</string>

    <string name="cake2">Торты</string>
    <string name="cake2descr">Торт — десерт, состоящий из одного или нескольких коржей, пропитанных кремом или джемом. Сверху торт обычно украшают кремом, глазурью или фруктами.
Коржи для большинства тортов изготовляются из бисквитного или песочного теста, классические торты представляют собой комбинацию из тонкого песочного коржа (для более стабильного основания) и одного или нескольких бисквитных коржей. Также для тортов иногда используют слоёное тесто или вафельные коржи. Для смазывания коржей обычно используют повидло, крем из сливочного масла или сливок с сахаром, сгущённое молоко. Также между коржами можно уложить слой фруктов, ягод, орехов, смочить коржи небольшим количеством алкоголя (ром, ликёр). Как в тесто, так и в крем можно добавить различные вкусовые и ароматические добавки: порошок какао, ваниль; пищевые красители.
Традиционно торты имеют округлую форму, однако некоторые разновидности, а также торты промышленного производства, выпекаются в прямоугольных формах. Такие торты часто разрезают на кусочки и продают в виде пирожных (к примеру, торт «Наполеон» и одноимённое пирожное). В Италии популярны торты в виде полусферы. В последнее время стали популярны необычные формы тортов, например, в виде звезды или сердца — эти торты чаще всего делают к особым случаям.</string>
    <string name="smallCake2">Пирожные</string>
    <string name="smallCake2descr">Пирожное — кондитерское изделие небольшого размера из сладкого сдобного теста, обычно с кремовой начинкой.</string>

    <string name="chocolateDark">Чёрный (горький) шоколад</string>
    <string name="chocolateDarkdescr">Чёрный (горький) шоколад делают из тёртого какао, сахарной пудры и масла какао. Изменяя соотношение между сахарной пудрой и какао тёртым, можно изменять вкусовые особенности получаемого шоколада — от горького до сладкого. Чем больше в шоколаде тёртого какао, тем более горьким вкусом и более ярким ароматом обладает шоколад. Самый горький шоколад продают под названием «горький», менее горький — под названием «тёмный». </string>
    <string name="chocolateMilk">Молочный шоколад</string>
    <string name="chocolateMilkdescr">Молочный шоколад с добавлениями изготавливают из тёртого какао, масла какао, сахарной пудры и сухого молока. Чаще всего используют плёночное сухое молоко жирностью 2,5 % или сухие сливки. Аромат молочному шоколаду придаёт какао, вкус складывается из сахарной пудры и сухого молока. Имеет светло-коричневый оттенок.  </string>
    <string name="chocolateWhite">Белый шоколад</string>
    <string name="chocolateWhitedescr">Белый шоколад готовят из масла какао, сахара, сухого молока и ванилина без добавления какао-порошка, поэтому он имеет кремовый цвет (белый) и не содержит теобромина. Своеобразный вкус белый шоколад приобретает благодаря особому сухому молоку, имеющему карамельный привкус. Также легко тает при высоких температурах воздуха.</string>

    <string name="addr1">ул. Пятницкая 3/4, стр.1 \n тел.: +7 (495) 644 40 45</string>
    <string name="addr1short">Булочная на Пятницкой</string>
    <string name="addr2">Проспект Мира 118 \n тел.: +7 (495) 644 40 45</string>
    <string name="addr2short">Булочная на проспекте Мира</string>
    <string name="addr3short">Булочная на Арбате</string>
    <string name="addr3">Скоро открытие</string>
</resources>