<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="ru.baturina.anna.bakeryfrag.TopActivity">

    <RelativeLayout
        android:id="@+id/logoAndTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/companyLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/companyName"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_cr" />

        <TextView
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:gravity="center"

            android:text="@string/companyName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorCompanyName"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vert_marg"
        android:paddingLeft="@dimen/activity_hor_marg"
        android:paddingRight="@dimen/activity_hor_marg"
        android:paddingTop="@dimen/activity_vert_marg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bread"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bread2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_hor_marg"
                    android:text="@string/bakedBread"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorCompanyName" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cond"

                    android:scaleType="fitCenter"
                    android:src="@drawable/cond2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_hor_marg"
                    android:text="@string/cond"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorCompanyName" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/choco"
                    android:scaleType="fitCenter"
                    android:src="@drawable/choc2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_hor_marg"
                    android:text="@string/choco"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorCompanyName" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Contact"
                    android:scaleType="fitCenter"
                    android:src="@drawable/address2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_hor_marg"
                    android:text="@string/Contact"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorCompanyName" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>